돔을 이용하여 html 객체 저장

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matching the Dream</title>
     <link rel="stylesheet" href="login.css">
-    <script src="/js/home/login.js"></script>
+    <script src="/js/home/login.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -18,8 +18,8 @@
             </ul>
         </header>
         <section>
-            <input type="text" placeholder="아이디"><br>
-            <input type="text" placeholder="비밀번호"><br>
+            <input id="id" type="text" placeholder="아이디"><br>
+            <input id="psword" type="text" placeholder="비밀번호"><br>
             <button>로그인</button>
         </section>
     </div>
